--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GLFW_PATH=E:/cpp/dependencies/glfw-3.3.8.bin.WIN64
-GLM_PATH=E:/cpp/dependencies/glm
-VULKAN_SDK_PATH=E:/cpp/dependencies/VulkanSDK/1.3.261.1
-MINGW_PATH=E:/cpp/dependencies/w64devkit
+GLFW_PATH=../dependencies/glfw-3.3.8.bin.WIN64
+GLM_PATH=../dependencies/glm
+VULKAN_SDK_PATH=../dependencies/VulkanSDK/1.3.261.1
+MINGW_PATH=../dependencies/w64devkit
