--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,7 @@
 			"command": "g++.exe",
 			"args": [
 				"-fdiagnostics-color=always",
+				"-g",
 				"${workspaceRoot}/src/*.cpp",
 			
 				"--std=c++17",
@@ -23,7 +24,7 @@
 				"-lgdi32",
 
 				"-o",
-				"${workspaceRoot}/${workspaceFolderBasename}.exe"
+				"${workspaceRoot}/build/${workspaceFolderBasename}.exe"
 			],
 			"options": {
 				"cwd": "${fileDirname}"
