--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ GLFW_PATH=../dependencies/glfw-3.3.8.bin.WIN64
 GLM_PATH=../dependencies/glm
 VULKAN_SDK_PATH=../dependencies/VulkanSDK/1.3.261.1
 MINGW_PATH=../dependencies/w64devkit
+GLSLC=../dependencies/VulkanSDK/1.3.261.1/Bin/glslc.exe
