--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ GLM_PATH=../dependencies/glm
 VULKAN_SDK_PATH=../dependencies/VulkanSDK/1.3.261.1
 MINGW_PATH=../dependencies/w64devkit
 GLSLC=../dependencies/VulkanSDK/1.3.261.1/Bin/glslc.exe
+TINYOBJ_PATH=./libs/tinyobjloader
