--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,6 +17,7 @@
 				"-I${workspaceRoot}/../dependencies/glfw-3.3.8.bin.WIN64/include",
 				"-L${workspaceRoot}/../dependencies/glfw-3.3.8.bin.WIN64/lib-mingw-w64",
 				"-I${workspaceRoot}/../dependencies/glm",
+				"-I${workspaceRoot}/libs/tinyobjloader",
 
 				"-static",
 				"-lvulkan-1",
