--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -33,12 +33,25 @@
 			},
 			"group": {
 				"kind": "build",
-				"isDefault": true
+				"isDefault": false
 			},
 			"problemMatcher": [
 				"$gcc"
 			],
 			"detail": "Задача создана отладчиком."
+		},
+		{
+			"type": "shell",
+			"label": "make: Engine build",
+			"command": "make",
+			"args": [],
+			"options": {
+				"cwd": "${workspaceRoot}"
+			},
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			}
 		}
 	]
 }
