Добавлен класс NonCopyable. Исправлены некоторые предупреждения

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -78,7 +78,7 @@
           "ignoreFailures": true
         }
       ],
-      "preLaunchTask": "make: Engine build"
+      "preLaunchTask": "make: build engine"
     }
   ]
 }
